# treelang

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  calculator.py  main.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  live-evaluation.yml  promotion-policy.yml  release.yml
cookbook/: calculator.ipynb  calculator.py  gamestats.ipynb  gamestats.py  memory.ipynb
docs/: README.md  api.md  migration-0.10.md
docs/adr/: 0001-schema-versioning.md  0002-execution-semantics.md  0003-provider-contracts.md
evaluation/: README.md  __init__.py  comparison.py  dataset.py  eval.py  live.py  live_eval.py  models.py  offline.py  runner.py
evaluation/baselines/v1/: offline.json  tolerances.json
evaluation/data/: README.md  nested.py  questions.jsonl  tools.py
evaluation/data/v1/: live.jsonl  offline.json
evaluation/data/v2/: live.jsonl
scripts/: check_cookbooks.py  generate_api_docs.py  smoke_release.py  validate_release.py
tests/: __init__.py  test_cookbook.py  test_cookbooks.py  test_documentation.py  test_observability.py  test_public_api.py  test_release.py  test_security.py
tests/ai/: __init__.py  test_arborist.py  test_provider.py
tests/evaluation/: __init__.py  test_comparison.py  test_live.py  test_runner.py
tests/trees/: __init__.py  test_ast.py  test_nodes.py  test_tool.py  test_tree.py
treelang/: __init__.py  exceptions.py  observability.py
treelang/ai/: __init__.py  arborist.py  config.py  memory.py  prompt.py  provider.py  responses.py  selector.py  tool.py  transport.py
treelang/trees/: __init__.py  compilation.py  execution.py  test_tree.py  traversal.py  tree.py
treelang/trees/schemas/: __init__.py  v1.py
