[project]
name = "treelang"
version = "0.1.0"
description = "LLM function calling on steroids using Abstract Syntax Trees."
authors = [
    {name = "csolar",email = "cristiano.solarino@brightminded.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
packages = [
    {include = "treelang"}
]

[tool.poetry]

[tool.poetry.dependencies]
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
