[project]
name = "treelang"
version = "0.10.0"
description = "LLM function calling on steroids using Abstract Syntax Trees."
authors = [
    { name = "csolar", email = "cristiano.solarino@brightminded.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.1,<2",
    "openai>=1.68,<2",
    "pydantic>=2.10,<3",
    "python-dotenv>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/cs0lar/treelang"
Issues = "https://github.com/cs0lar/treelang/issues"

[dependency-groups]
dev = [
    "build>=1.4,<2",
    "ipykernel>=6.29,<8",
    "mcp[cli]>=1.28.1,<2",
    "mypy>=1.19,<2",
    "notebook>=7,<8",
    "pre-commit>=4.5,<5",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7.0,<8",
    "ruff>=0.15,<0.16",
]

[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017"]

[tool.mypy]
python_version = "3.12"
files = [
    "treelang",
    "evaluation/comparison.py",
    "evaluation/dataset.py",
    "evaluation/eval.py",
    "evaluation/live.py",
    "evaluation/live_eval.py",
    "evaluation/models.py",
    "evaluation/offline.py",
    "evaluation/runner.py",
    "scripts",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=treelang",
    "--cov=evaluation",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=60",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["treelang", "evaluation"]
omit = ["evaluation/data/tools.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
